--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,12 @@
+<app-header></app-header>
+
+<div class="container mt-6">
 <h2 class="text-5xl font-bold font-mono">Welcome to {{title}}</h2>
+
+<ul>
+    @for (product of products; track product.id) {
+        <li> {{product.name}}</li>
+
+    }
+</ul>
+</div>
