--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+
 @import "tailwindcss";
+
+.container {
+    @apply mx-auto max-w-screen-2xl
+}
