--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,8 +1,31 @@
-/* You can add global styles to this file, and also import other style files */
 @use '@angular/material' as mat;
 
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+$customTheme: mat.define-theme();
+
+@include mat.core();
+
+.custom-theme {
+    @include mat.all-component-themes($customTheme);
+
+    // override the button styles
+    .mdc-button, .mdc-raised-button, .mdc-stroked-button, .mdc-flat-button {
+        @apply rounded-md
+    }
+}
 
 .container {
     @apply mx-auto max-w-screen-2xl
+}
+
+
+.text-primary{
+    color: #7d00fa;
+}
+
+button.match-input-height {
+    height: var(--mat-form-filed-container-height) !important;
 }
