--- a/client/src/app/features/shop/shop.component.html
+++ b/client/src/app/features/shop/shop.component.html
@@ -1,21 +1,18 @@
+@if (products) {
 <div class="flex flex-col gap-3">
-
     <div class="flex justify-between">
-        <mat-paginator class="bg-white" (page) =handlePageEvent($event) [length]="products?.count" 
-                    [pageSize]="shopParams.pageSize" [showFirstLastButtons]="true"
-                    [pageSizeOptions]="pageSizeOptions"  [pageIndex]="shopParams.pageNumber-1" 
-                    aria-label="Select Page">
+        <mat-paginator class="bg-white" (page)=handlePageEvent($event) [length]="products.count"
+            [pageSize]="shopParams.pageSize" [showFirstLastButtons]="true" [pageSizeOptions]="pageSizeOptions"
+            [pageIndex]="shopParams.pageNumber-1" aria-label="Select Page">
 
         </mat-paginator>
-        <form #searchForm="ngForm" (ngSubmit)="onSearchChange()" class="relative flex items-center w-full max-w-md mx-4">
-                <input type="search" class="block w-full p-4 text-sm text-grey-900 border border-grey-300 rounded-lg" 
-                    placeholder="Search"
-                    name="search"
-                    [(ngModel)]="shopParams.search"
-                />
-                <button mat-icon-button type="submit" class="absolute insert-y-0 right-8 top-2 flex items-center pl-3">
-                    <mat-icon>search</mat-icon>
-                </button>
+        <form #searchForm="ngForm" (ngSubmit)="onSearchChange()"
+            class="relative flex items-center w-full max-w-md mx-4">
+            <input type="search" class="block w-full p-4 text-sm text-grey-900 border border-grey-300 rounded-lg"
+                placeholder="Search" name="search" [(ngModel)]="shopParams.search" />
+            <button mat-icon-button type="submit" class="absolute insert-y-0 right-8 top-2 flex items-center pl-3">
+                <mat-icon>search</mat-icon>
+            </button>
         </form>
         <div class="flex  gap-3">
 
@@ -31,7 +28,7 @@
     </div>
 
     <div class="grid grid-cols-5 gap-4">
-        @for (product of products?.data; track product.id) {
+        @for (product of products.data; track product.id) {
         <app-product-item [product]="product"></app-product-item>
         }
     </div>
@@ -46,3 +43,5 @@
         }
     </mat-selection-list>
 </mat-menu>
+
+}
