--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -29,3 +29,8 @@ $customTheme: mat.define-theme();
 button.match-input-height {
     height: var(--mat-form-filed-container-height) !important;
 }
+
+.mdc-notched-outlined__notch {
+    border-right-style: none !important
+
+}
